# data-engineering-analysis-mvp

./: README.md  pyproject.toml
app/: app.py
backend/: db.py  ingest.py  metrics.py  models.py  pipeline.py  verify.py
backend/sql/: 010_fct_events.sql  020_metrics.sql  raw_events.sql
data/: events.duckdb  sample.csv
tests/: test_app.py  test_ingest.py  test_metrics.py  test_models.py
